--- a/vertigo-core/src/test/java/io/vertigo/core/node/config/yaml/bio.yaml
+++ b/vertigo-core/src/test/java/io/vertigo/core/node/config/yaml/bio.yaml
@@ -1,9 +1,9 @@
 modules:
-  io.vertigo.app.config.yaml.YamlBioFeatures:
+  io.vertigo.core.node.config.yaml.YamlBioFeatures:
       features:
         - bio:
         - math: 
             start: 100
       plugins:
-        - io.vertigo.core.spaces.component.data.MathPlugin: 
+        - io.vertigo.core.node.component.data.MathPlugin: 
             factor: 20
