a plugin is always defined by an api (interface)

--- a/vertigo-core/src/test/java/io/vertigo/core/node/config/yaml/bio-boot.yaml
+++ b/vertigo-core/src/test/java/io/vertigo/core/node/config/yaml/bio-boot.yaml
@@ -10,6 +10,6 @@ modules:
         - math: 
             start: 100
       plugins:
-        - io.vertigo.core.node.component.data.MathPlugin: 
+        - io.vertigo.core.node.component.data.SimpleMathPlugin: 
             factor: 20
   
