--- a/vertigo-core/src/test/java/io/vertigo/core/node/config/yaml/bio.yaml
+++ b/vertigo-core/src/test/java/io/vertigo/core/node/config/yaml/bio.yaml
@@ -5,5 +5,5 @@ modules:
         - math: 
             start: 100
       plugins:
-        - io.vertigo.core.node.component.data.MathPlugin: 
+        - io.vertigo.core.node.component.data.SimpleMathPlugin: 
             factor: 20
